--- a/extension/popup/settings.html
+++ b/extension/popup/settings.html
@@ -24,6 +24,14 @@
       </div>
       
       <div class="setting-group">
+        <label class="checkbox-label">
+          <input type="checkbox" id="eyeTrackingEnabled">
+          <span>👁️ Enable Eye Tracking (Auto-pause when looking away)</span>
+        </label>
+        <small>Pauses video automatically after 5 seconds of not looking at screen. Requires Python eye tracker running.</small>
+      </div>
+      
+      <div class="setting-group">
         <label for="pauseDelay">Popup Delay (seconds)</label>
         <input type="number" id="pauseDelay" min="0" max="10" value="1">
         <small>How long to wait after pausing before showing recap</small>
